refactor: Use Stream.toList() and improve log message